--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
     <main id="cards-position">
          <div class="cards">
                <div class="cards-content">
+                    <h1>Youtuber</h1>
                     <form action="https://www.youtube.com/results" method="GET" >
-                    <h4>Youtuber</h4>
-                    <input type="text" name="search_query" id="seach" placeholder="Escreva alguma coisa">
-                    <input type="submit" value="pesquisa" >
+                         <input type="text" name="search_query" id="seach" placeholder="Escreva alguma coisa">
+                         <input type="submit" value="pesquisa" >
+                    </form>
                </div>
           </div>
-     </form>
-     <form action="https://www.google.com/search?" method="GET" >
-          <div class="db" >
-               <h4>Google</h4>
-               <input type="text" name="q" placeholder="write something">
-               <input type="submit" value="seach">
+
+          <div class="cards">
+               <div class="cards-content">
+                    <h1>Google</h1>
+                    <form action="https://www.google.com/search?" method="GET" >
+                         <input type="text" name="q" placeholder="write something">
+                         <input type="submit" value="seach">
+                    </form>
+               </div>
           </div>
-     </form>
     </main>
 </body>
 </html>
