--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h1>Youtuber</h1>
                     <form action="https://www.youtube.com/results" method="GET" >
                          <input type="text" name="search_query" id="seach" placeholder="Escreva alguma coisa">
-                         <input type="submit" value="pesquisa" >
+                         <input type="submit" value="pesquisa" class="efeito">
                     </form>
                </div>
           </div>
@@ -30,10 +30,11 @@
                     <h1>Google</h1>
                     <form action="https://www.google.com/search?" method="GET" >
                          <input type="text" name="q" placeholder="write something">
-                         <input type="submit" value="seach">
+                         <input type="submit" value="seach" class="efeito">
                     </form>
                </div>
           </div>
     </main>
+
 </body>
 </html>
